Add manual installation in README.md, update .gitignore, Add parent class "GameObject", Add Apple class

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# Рidden file created by Mac OS
+.DS_Store
+
+# Byte-compiled
+__pycache__
+
 # Distribution / packaging
 .Python
 build/
