--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
-flake8==5.0.4
+attrs==24.2.0
+flake8==7.1.1
 flake8-docstrings==1.7.0
+iniconfig==2.0.0
+mccabe==0.7.0
+packaging==24.1
 pep8-naming==0.13.3
-pycodestyle==2.9.1
+pluggy==1.5.0
+py==1.11.0
+pycodestyle==2.12.1
+pydocstyle==6.3.0
+pyflakes==3.2.0
 pygame==2.5.2
 pytest==7.1.3
 pytest-timeout==2.1.0
+snowballstemmer==2.2.0
+tomli==2.0.2
